welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: t is already defined as variable t
  var t=new Array[Int](num)
      ^golomb:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var t:Array[Int]
      ^golomb:2: error: local variables must be initialized
  var t:Array[Int]
      ^golomb:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var compt:Int
      ^golomb:4: error: local variables must be initialized
  var compt:Int
      ^golomb:8: error: type mismatch;
 found   : Unit
 required: Int
  for(j<-1 to num){}
       ^